# otus_review

./: CMakeLists.txt  README.md
task1/: CMakeLists.txt
task1/include/: version.hpp
task1/src/: main.cpp  version.cpp.in
task1/test/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt
task2/include/: ip.hpp
task2/src/: main.cpp
task2/test/: CMakeLists.txt  ipv4.cpp
